# server-wrapper

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: cache.rs  config.rs  executor.rs  main.rs  source.rs  status.rs  transform.rs
src/config/: destinations.rs
src/source/: github.rs  http.rs  modrinth.rs  path.rs
src/status/: webhook.rs
