[package]
name = "server-wrapper"
version = "0.1.0"
authors = ["Gegy <gegy1000@gmail.com>"]
edition = "2018"

[profile.release]
strip = "symbols"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "stream", "gzip", "json"], default-features = false }
futures = "0.3"

bytes = "1.0"

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

zip = "0.5"
glob = "0.3"
sha1 = "0.6"

thiserror = "1.0"
