[package]
name = "server-wrapper"
version = "0.1.0"
authors = ["Gegy <gegy.dev@gmail.com>"]
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies]
tokio = { version = "1.25", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "stream", "gzip", "json"], default-features = false }
futures = "0.3"

bytes = "1.4"

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

zip = "0.6"
glob = "0.3"
sha1 = "0.10"

thiserror = "1.0"
